# ChangeLog for gnome-base/gnome-applets
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.7 2002/06/28 03:02:19 spider Exp $

*gnome-applets-1.4.0.4-r2 (28 Jun 2002)
  28 Jun 2002 ; Spider <spider@gentoo.org> gnome-applets-1.4.0.4-r2.ebuild :
  changed the dependency from gnome-core to gnome-panel
  since core and panel are the same package, same binaries and same files, there shouldn't be any conflicts at any time. 

*gnome-applets-2.0.0 (10 Jun 2002)
  10 Jun 2002; Spider <spider@gentoo.org> gnome-applets-2.0.0.ebuild :
  back in force with a stable version

*gnome-applets-1.105.0 (5 June 2002)
  5 June 2002; Gabriele Giorgetti <stroke@gentoo.org> gnome-applets-1.105.0.ebuild:
  new version

*gnome-applets-1.104.0 (27 May 2002)
  27 May 2002; Spider <spider@gentoo.org> gnome-applets-1.104.0.ebuild:
  new version

*gnome-applets-1.103.0 (23 May 2002)
  23 May 2002; Spider <spider@gentoo.org> gnome-applets-1.103.0.ebuild:
  New version released ( or not really but its there )


*gnome-applets-1.102.1 (22 May 2002)
  22 May 2002; Spider <spider@gentoo.org> gnome-applets-1.102.1.ebuild:
  added the gnome2 branch

*gnome-applets-1.4.0.4-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.