@@ -1,0 +1,1 @@
+MD5 f3a55f1d0c2486b55943f2da213f4ca5 gnome-applets-2.0.0.tar.bz2 1737576
