@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gnome-applets
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.7 2002/06/28 03:02:19 spider Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/gnome-base/cvs-repo/gentoo-x86/gnome-base/gnome-applets/ChangeLog,v 1.8 2002/06/28 08:32:22 spider Exp $
+
+*gnome-applets-2.0.0-r1 (28 Jun 2002)
+  28 Jun 2002; Spider <spider@gentoo.org> gnome-applets-2.0.0-r1.ebuild :
+  automatic schema detection, libtoolize properly, debug properly, build the menu applet and use a single threaded build to try and detect errors.
+  use the mirror://
+
 
 *gnome-applets-1.4.0.4-r2 (28 Jun 2002)
   28 Jun 2002 ; Spider <spider@gentoo.org> gnome-applets-1.4.0.4-r2.ebuild :
